[package]
name = "apollo-fwht"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Fast Walsh-Hadamard transform utilities for Apollo"


[features]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
apollo-fft = { path = "../apollo-fft" }
ndarray = { workspace = true }
leto = { workspace = true }
num-complex = { workspace = true }
moirai = { workspace = true }
hermes-simd = { workspace = true }
mnemosyne = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true
