[package]
name = "apollo-fwht"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Fast Walsh-Hadamard transform utilities for Apollo"


[features]
wgpu = [
    "dep:hephaestus-core",
    "dep:hephaestus-wgpu",
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true }
apollo-fft = { path = "../apollo-fft" }
apollo-leto-interop = { path = "../apollo-leto-interop" }
leto = { workspace = true }
eunomia = { workspace = true, features = ["serde"] }
moirai = { workspace = true }
hermes-simd = { workspace = true }
mnemosyne = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true

[lints]
workspace = true
