[package]
name = "apollo-gft-wgpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo GFT"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-gft = { path = "../apollo-gft" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
wgpu = { version = "26.0", features = ["wgsl"] }

[dev-dependencies]
nalgebra = "0.33"
ndarray = { workspace = true }

[lints]
workspace = true
