[package]
name = "apollo-gft"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Graph Fourier transform plans and utilities for Apollo"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
nalgebra = { workspace = true }
ndarray = { workspace = true }
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
mnemosyne = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true
