[package]
name = "apollo-gft"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Graph Fourier transform plans and utilities for Apollo"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
leto = { workspace = true }
leto-ops = { workspace = true }
ndarray = { workspace = true }
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
mnemosyne = { workspace = true }
moirai = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true
