[package]
name = "apollo-gft"
version = "0.10.0"
rust-version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Graph Fourier transform plans and utilities for Apollo"


[features]
wgpu = [
    "dep:hephaestus-core",
    "dep:hephaestus-wgpu",
    "dep:bytemuck"
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
apollo-fft = { path = "../apollo-fft" }
apollo-leto-interop = { path = "../apollo-leto-interop" }
hermes-simd = { workspace = true }
leto = { workspace = true }
leto-ops = { workspace = true }
serde = { workspace = true }
mnemosyne = { workspace = true }
moirai = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
eunomia = { workspace = true }
proptest.workspace = true

[lints]
workspace = true

