[package]
name = "apollo-ghostcell"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Branded permission cells for Apollo execution workspaces"

[features]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[lints]
workspace = true
