[package]
name = "apollo-hilbert-wgpu"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo Hilbert"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-hilbert = { path = "../apollo-hilbert" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
leto = { workspace = true }
num-complex = { workspace = true }
wgpu = { version = "26.0", features = ["wgsl"] }

[lints]
workspace = true
