[package]
name = "apollo-leto-interop"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared zero-copy Leto host-array interop for Apollo transforms"

[dependencies]
leto = { workspace = true }

[lints]
workspace = true
