[package]
name = "apollo-leto-interop"
version = "0.17.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared zero-copy Leto host-array interop for Apollo transforms"

[dependencies]
leto = { workspace = true }

[lints]
workspace = true
