[package]
name = "apollo-mellin-wgpu"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo Mellin"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-mellin = { path = "../apollo-mellin" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
num-complex = "0.4"
wgpu = { version = "26.0", features = ["wgsl"] }

[lints]
workspace = true
