[package]
name = "apollo-mellin-wgpu"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo Mellin"


[features]
default = ["parallel", "mnemosyne-memory"]
parallel = ["apollo-fft/parallel", "apollo-mellin/parallel"]
mnemosyne-memory = ["apollo-fft/mnemosyne-memory", "apollo-mellin/mnemosyne-memory"]

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-mellin = { path = "../apollo-mellin" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
leto = { workspace = true }
num-complex = { workspace = true }
wgpu = { version = "26.0", features = ["wgsl"] }

[lints]
workspace = true
