[package]
name = "apollo-mellin"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Mellin transform plans for scale-domain Apollo signal analysis"


[features]
wgpu = [
    "dep:apollo-wgpu-helpers",
    "dep:hephaestus-wgpu",
    "dep:wgpu",
    "dep:pollster"
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers", optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true }
apollo-fft = { path = "../apollo-fft" }
hermes-simd = { workspace = true }
leto = { workspace = true }
mnemosyne = { workspace = true }
num-complex = { workspace = true }
moirai = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
num-complex = { workspace = true }
proptest = "1.6"

[lints]
workspace = true
