[package]
name = "apollo-ntt-wgpu"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo NTT"

[features]
default = ["parallel", "mnemosyne-memory"]
parallel = ["apollo-ntt/parallel"]
mnemosyne-memory = ["apollo-ntt/mnemosyne-memory"]
proptest_gpu = []

[dependencies]
apollo-ntt = { path = "../apollo-ntt" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
leto = { workspace = true }
wgpu = { version = "26.0", features = ["wgsl"] }

[dev-dependencies]
ndarray = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
