[package]
name = "apollo-ntt"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Number Theoretic Transform plans and utilities for Apollo"


[features]
wgpu = [
    "dep:apollo-wgpu-helpers",
    "dep:hephaestus-wgpu",
    "dep:wgpu",
    "dep:pollster",
    "dep:bytemuck"
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = ["leto/mnemosyne-alloc"]
proptest_gpu = []

[dependencies]
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers", optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
hermes-simd = { workspace = true }
leto = { workspace = true }
eunomia = { workspace = true, features = ["serde"] }
moirai = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
