[package]
name = "apollo-ntt"
version = "0.5.0"
rust-version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Number Theoretic Transform plans and utilities for Apollo"


[features]
wgpu = [
    "dep:hephaestus-core",
    "dep:hephaestus-wgpu",
    "dep:bytemuck"
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = ["leto/mnemosyne-alloc"]
proptest_gpu = []

[dependencies]
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
apollo-leto-interop = { path = "../apollo-leto-interop" }
hermes-simd = { workspace = true }
leto = { workspace = true }
eunomia = { workspace = true, features = ["serde"] }
moirai = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
