[package]
name = "apollo-nufft-wgpu"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU NUFFT backend surface for Apollo"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-fft-wgpu = { path = "../apollo-fft-wgpu" }
apollo-nufft = { path = "../apollo-nufft" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
leto = { workspace = true }
ndarray = { workspace = true }
num-complex = "0.4"
thiserror = "1.0"
wgpu = { version = "26.0", features = ["wgsl"] }

[features]
default = []
diagnostics = []
## Enable intermediate GPU grid readbacks after load and IFFT stages for numerical triage.
## This feature is intended for testing and debugging only; it adds GPU→CPU synchronization
## points that would be unacceptable in production pipelines.
debug-readbacks = []

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
half = { version = "2.3", features = ["num-traits"] }
ndarray = { workspace = true }

[[bench]]
name = "buffer_reuse"
harness = false

[lints]
workspace = true
