[package]
name = "apollo-nufft"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Non-uniform FFT plans and utilities for Apollo"


[features]
wgpu = [
    "apollo-fft/wgpu",
    "dep:apollo-wgpu-helpers",
    "dep:hephaestus-wgpu",
    "dep:wgpu",
    "dep:pollster"
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []
diagnostics = []
debug-readbacks = []

[dependencies]
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers", optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true }
apollo-fft = { path = "../apollo-fft" }
hermes-simd = { workspace = true }
leto = { workspace = true }
eunomia = { workspace = true, features = ["serde"] }
mnemosyne = { workspace = true }
moirai = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "buffer_reuse"
harness = false
required-features = ["wgpu"]
