[package]
name = "apollo-nufft"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Non-uniform FFT plans and utilities for Apollo"


[features]
wgpu = [
    "apollo-fft/wgpu",
    "dep:hephaestus-core",
    "dep:hephaestus-wgpu",
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []
diagnostics = []

[dependencies]
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true }
apollo-fft = { path = "../apollo-fft" }
apollo-leto-interop = { path = "../apollo-leto-interop" }
hermes-simd = { workspace = true }
leto = { workspace = true }
eunomia = { workspace = true, features = ["serde"] }
mnemosyne = { workspace = true }
moirai = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
apollo-bench = { path = "../apollo-bench" }

[lints]
workspace = true

[[bench]]
name = "buffer_reuse"
harness = false
required-features = ["wgpu"]
