[package]
name = "apollo-python"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Python bindings for Apollo FFT and NUFFT"

[lib]
name = "pyapollofft"
crate-type = ["cdylib"]


[features]
default = ["parallel", "mnemosyne-memory"]
parallel = ["apollo-fft/parallel", "apollo-dctdst/parallel", "apollo-dht/parallel", "apollo-fwht/parallel", "apollo-nufft/parallel"]
mnemosyne-memory = ["apollo-fft/mnemosyne-memory", "apollo-dctdst/mnemosyne-memory", "apollo-dht/mnemosyne-memory", "apollo-fwht/mnemosyne-memory", "apollo-nufft/mnemosyne-memory"]

[dependencies]
apollo-fft = { path = "../apollo-fft", features = ["wgpu"] }
apollo-nufft = { path = "../apollo-nufft" }
apollo-dht = { path = "../apollo-dht" }
apollo-fwht = { path = "../apollo-fwht" }
apollo-dctdst = { path = "../apollo-dctdst" }
leto = { workspace = true }
eunomia = { workspace = true }
bytemuck = { workspace = true }
pyo3 = { workspace = true }

[lints]
workspace = true
