[package]
name = "apollo-qft-wgpu"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo QFT"


[features]
default = ["parallel", "mnemosyne-memory"]
parallel = ["apollo-fft/parallel", "apollo-qft/parallel"]
mnemosyne-memory = ["apollo-fft/mnemosyne-memory", "apollo-qft/mnemosyne-memory"]

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-qft = { path = "../apollo-qft" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
leto = { workspace = true }
num-complex = { workspace = true }
wgpu = { version = "26.0", features = ["wgsl"] }

[dev-dependencies]
ndarray = { workspace = true }

[lints]
workspace = true
